<resources>
    <string name="app_name"><u>Nyaysetu</u></string>
    <string name="tagline">Where justice finds its way</string>
    <string name="logo">logo</string>
    <string name="nyaysetu">Nyaysetu</string>
    <string name="random">random</string>
    <string name="Admin">Admin</string>
    <string name="login">Login</string>
    <string name="Adin">Admin login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

</resources>