<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AECFDF"
    tools:context=".admin_login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="230dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="407dp"
        android:layout_height="408dp"
        android:layout_marginTop="1dp"
        android:alpha="0.9"
        android:contentDescription="@string/random"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ellipse"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike_angular"
        android:text="@string/Adin"
        android:textColor="#101010"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.22" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_admin"
        android:layout_width="281dp"
        android:layout_height="54dp"
        android:alpha="1"
        android:background="@drawable/border_box"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#A6050004"
        android:textColorLink="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.165" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_admin"
        android:layout_width="281dp"
        android:layout_height="54dp"
        android:background="@drawable/border_box"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#A6050004"
        android:textColorLink="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_admin"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/login_admin"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:alpha="0.7"
        android:text="@string/login"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_admin"
        app:layout_constraintVertical_bias="0.104"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>